# astronav

./: Cargo.toml  README.md  build.rs  clippy.toml  rustfmt.toml
.cargo/: config.toml
benches/: dot_bench.rs  hashmap_bench.rs  tree_bench.rs
src/: common.rs  data_loader.rs  edmc_plugin.rs  event.rs  galaxy.rs  journal.rs  lib.rs  main.rs  pst.rs  py_lib.rs  sector_name.rs  ship.rs  visualizer.rs
src/gui_eframe/: galaxy_map.rs  mod.rs
src/gui_iced/: mod.rs
src/route/: mod.rs  mode.rs  tree_settings.rs
src/route/algorithms/: astar.rs  beam.rs  beam_stack.rs  dfs.rs  dijstra.rs  incremental_beam_search.rs  incremental_broadening.rs  mcts.rs  mod.rs  ship.rs
